--- a/src/_posts/2015-05-07-TARDIS.md
+++ b/src/_posts/2015-05-07-TARDIS.md
@@ -1,3 +1,10 @@
+---
+layout: post
+date: 2015-05-07
+title: T.A.R.D.I.S
+categories: TIY-Essay
+---
+
 # Time and Reflective Dimension In Space = T.A.R.D.I.S.
 
 In the past five weeks at The Iron Yard, we have worked hard, busted our brains, studied when we wanted
