--- a/src/_posts/2015-06-11-No-Name.md
+++ b/src/_posts/2015-06-11-No-Name.md
@@ -1,3 +1,10 @@
+---
+layout: post
+date: 2015-06-11
+title: No-Name
+categories: TIY-Essay
+---
+
 ### MY journal....
 
 Time flies! I couldn't believe it is already week 7! Wow! It is hard to believe
