--- a/src/_posts/2015-08-06-test.md
+++ b/src/_posts/2015-08-06-test.md
@@ -6,4 +6,4 @@ categories: TIY-Essay
 ---
 
 
-![myTestIMG]({{ site.url }}/assets/screenshot.jpg)
+![myTestIMG]({{ site.url }}/site-mockups/lotrt-gold.png)
