updating to work on wed site

--- a/src/_posts/2015-08-06-test.md
+++ b/src/_posts/2015-08-06-test.md
@@ -1,9 +1,9 @@
 ---
-layout: post
+layout:
 date: 2015-08-06
 title: Testing
-categories: TIY-Essay
+categories: Website
 ---
 
 
-![myTestIMG]({{ site.url }}/site-mockups/lotrt-gold.png)
+![myTestIMG](/assets/images/site-mockups/lotrt-gold.png)
