--- a/_posts/2015-05-07-TARDIS.md
+++ b/_posts/2015-05-07-TARDIS.md
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 # Time and Reflective Dimension In Space = T.A.R.D.I.S.
 
 In the past five weeks at The Iron Yard, we have worked hard, busted our brains, studied when we wanted
